--- a/style/visual.less
+++ b/style/visual.less
@@ -1,14 +1,9 @@
-.circleCard{
+.bar-chart{
   border: 1px solid #000;
-  padding: 5px 20px 10px;
-  display: inline-block;
-}
-p {
-    font-size: 20px;
-    font-weight: bold;
-    em {
-        background: yellow;
-        padding: 5px;
-        
-    }
+
+  .bar-chart-body{
+    overflow: hidden;
+    overflow-y: scroll;
+    outline: red 1px solid;
+  }
 }
