--- a/style/visual.less
+++ b/style/visual.less
@@ -1,9 +1,38 @@
-.bar-chart{
-  border: 1px solid #000;
+@fontSize: 10px;
+@fontColor: #444;
 
+.bar-chart {
+  // outline: red solid 1px;
+  color: @fontColor;
   .bar-chart-body{
     overflow: hidden;
     overflow-y: scroll;
-    outline: red 1px solid;
+  }
+
+  .bar-chart-labels {
+    text {
+      text-anchor: end;
+      font-size: @fontSize;
+    }
+  }
+}
+
+.chart-legend {
+  color: @fontColor;
+  font-size: @fontSize;
+  display: inline-block;
+
+  .chart-legend-text {
+    display: inline-block;
+    padding: 4px;
+  }
+
+  .chart-legend-color {
+    display: inline-block;
+
+    width: @fontSize;
+    height:  @fontSize;
+    border-radius: 50%;
+    margin-right: @fontSize/2;
   }
 }
