multiple values functionality

--- a/style/visual.less
+++ b/style/visual.less
@@ -36,3 +36,18 @@
     margin-right: @fontSize/2;
   }
 }
+
+.tooltip{
+  position: absolute;
+  display: inline-block;
+
+  font-size: @fontSize;
+  color: white;
+  text-shadow: #333 0 0 4px;
+  background: rgba(0,0,0,0.7);
+  padding: 0 5px;
+
+  dt, dd{
+    display: inline-block;
+  }
+}
