fixes and tests

--- a/style/visual.less
+++ b/style/visual.less
@@ -13,6 +13,7 @@
         text {
             text-anchor: end;
             font-size: @fontSize;
+            white-space: nowrap;
         }
     }
 
